project/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> seq
Rule 2     start -> empty
Rule 3     seq -> unit seq
Rule 4     seq -> unit
Rule 5     unit -> A B
Rule 6     unit -> LPAREN seq RPAREN
Rule 7     empty -> <empty>

Terminals, with rules where they appear

A                    : 5
B                    : 5
LPAREN               : 6
RPAREN               : 6
error                : 

Nonterminals, with rules where they appear

empty                : 2
seq                  : 1 3 6
start                : 0
unit                 : 3 4

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . seq
    (2) start -> . empty
    (3) seq -> . unit seq
    (4) seq -> . unit
    (7) empty -> .
    (5) unit -> . A B
    (6) unit -> . LPAREN seq RPAREN

    $end            reduce using rule 7 (empty -> .)
    A               shift and go to state 5
    LPAREN          shift and go to state 6

    start                          shift and go to state 1
    seq                            shift and go to state 2
    empty                          shift and go to state 3
    unit                           shift and go to state 4

state 1

    (0) S' -> start .



state 2

    (1) start -> seq .

    $end            reduce using rule 1 (start -> seq .)


state 3

    (2) start -> empty .

    $end            reduce using rule 2 (start -> empty .)


state 4

    (3) seq -> unit . seq
    (4) seq -> unit .
    (3) seq -> . unit seq
    (4) seq -> . unit
    (5) unit -> . A B
    (6) unit -> . LPAREN seq RPAREN

    $end            reduce using rule 4 (seq -> unit .)
    RPAREN          reduce using rule 4 (seq -> unit .)
    A               shift and go to state 5
    LPAREN          shift and go to state 6

    unit                           shift and go to state 4
    seq                            shift and go to state 7

state 5

    (5) unit -> A . B

    B               shift and go to state 8


state 6

    (6) unit -> LPAREN . seq RPAREN
    (3) seq -> . unit seq
    (4) seq -> . unit
    (5) unit -> . A B
    (6) unit -> . LPAREN seq RPAREN

    A               shift and go to state 5
    LPAREN          shift and go to state 6

    seq                            shift and go to state 9
    unit                           shift and go to state 4

state 7

    (3) seq -> unit seq .

    $end            reduce using rule 3 (seq -> unit seq .)
    RPAREN          reduce using rule 3 (seq -> unit seq .)


state 8

    (5) unit -> A B .

    A               reduce using rule 5 (unit -> A B .)
    LPAREN          reduce using rule 5 (unit -> A B .)
    $end            reduce using rule 5 (unit -> A B .)
    RPAREN          reduce using rule 5 (unit -> A B .)


state 9

    (6) unit -> LPAREN seq . RPAREN

    RPAREN          shift and go to state 10


state 10

    (6) unit -> LPAREN seq RPAREN .

    A               reduce using rule 6 (unit -> LPAREN seq RPAREN .)
    LPAREN          reduce using rule 6 (unit -> LPAREN seq RPAREN .)
    $end            reduce using rule 6 (unit -> LPAREN seq RPAREN .)
    RPAREN          reduce using rule 6 (unit -> LPAREN seq RPAREN .)

